# kamfadm

./: .gitignore  Pipfile  fai_bin_bin.py  predict_lr.py  predict_nb.py  pyproject.toml  train_cv2nb.py  train_lr.py  train_nb.py  train_pr.py  train_uh.py
data/: add_quad_terms.py  adult_arff.py  adult_discritize.py  creditg_f_bindata.py  creditg_f_data.py  creditg_j_bindata.py  creditg_j_data.py  creditg_p_bindata.py  creditg_p_data.py  sdata_cv.py  sdata_kam1.py  sdata_zkc1.py  sdata_zkc2.py  select_sensitive.py
fadm/: __init__.py
fadm/eval/: __init__.py  _bin_class.py  _bin_class_bin_sensitive.py
fadm/lr/: __init__.py  pr.py  uh.py
fadm/nb/: __init__.py  _nb.py  cv2nb.py
fadm/nb/tests/: test_cv2nb.py
fadm/util/: __init__.py  _base.py
